# whispy

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  FEATURE_MATRIX.md  MANUAL_TEST_PLAN.md  Makefile  PROJECT_MAP.md  README.md  RESEARCH_LOG.md  REVIEW_V1_PLAN.md  SPECIFICATION.md  generate_icons.py  install.sh  pyproject.toml  run_tests_timed.py  whisper-dictation.py  whispy.py  whispy_daemon.py  wispy.py
.claude/: settings.json
.claude/skills/validate/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
.opencode/plans/: TODO-openspec-orchestration.md
.opencode/skills/research-log/: SKILL.md
docs/: CONTEXT.md  PROJECT_MAP.md  ROADMAP.md  SPECIFICATION.md  code-audit.md  deployment.md  homebrew.md  transcription-quality-and-memory.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
openspec/changes/add-linux-x11-support/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-login-item-toggle/: proposal.md  tasks.md
openspec/changes/architectural-retrospective-and-stabilization/: proposal.md  tasks.md
openspec/changes/archive/2026-04-18-architectural-retrospective-and-stabilization/: design.md  tasks.md
openspec/changes/archive/2026-04-24-fix-e2e-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-26-tests-and-language-fix/: design.md  tasks.md
openspec/changes/archive/2026-04-27-always-trigger-research-log/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-default-config-params/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-remove-whisper-credit/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-28-fix-reload-and-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-recording-visualization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-simplify-config-ui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-promotional-website/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-add-vercel-deploy-pipeline/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-code-health-audit-and-fixes/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-document-homebrew-integration/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-transcription-memory-and-quality/: README.md  design.md  proposal.md  tasks.md
openspec/changes/consolidate-macos-install/: design.md  tasks.md
openspec/changes/fix-capture-thread-races/: design.md  proposal.md  tasks.md
openspec/changes/fix-dual-instance-fullscreen-pill/: design.md  tasks.md
openspec/changes/fix-trigger-and-eventtap-robustness/: proposal.md  tasks.md
openspec/changes/fix-ui-main-thread-safety/: design.md  proposal.md  tasks.md
openspec/changes/fix-user-facing-docs/: design.md  tasks.md
openspec/changes/ship-v1-release-install/: design.md  tasks.md
openspec/changes/tests-and-language-fix/: proposal.md  tasks.md
openspec/specs/: TESTING-TIERS.md
openspec/specs/api-interface/: spec.md
openspec/specs/audio-capture/: spec.md
openspec/specs/ci-cd-pipeline/: spec.md
openspec/specs/core-engine/: spec.md
openspec/specs/end-to-end-smoke/: spec.md
openspec/specs/event-listener/: spec.md
openspec/specs/linux-support/: spec.md
openspec/specs/login-item-autostart/: spec.md
openspec/specs/macos-install/: spec.md
openspec/specs/menu-bar-theming/: spec.md
openspec/specs/platform-abstraction/: spec.md
openspec/specs/promotional-website/: spec.md
openspec/specs/recording-visualization/: spec.md
openspec/specs/release-validation/: spec.md
openspec/specs/single-instance-lock/: spec.md
openspec/specs/streaming-transcription/: spec.md
openspec/specs/text-cleaning/: spec.md
openspec/specs/text-injection/: spec.md
openspec/specs/transcription-quality/: spec.md
openspec/specs/trigger-selection-ui/: spec.md
packaging/homebrew/: whispy.rb
packaging/macos/: build_app.sh  create_signing_cert.sh  make_icns.py  setup_app.py  whispy.entitlements
plans/: ferrofluid-integration.md
research/: SESSION_install-graphify_2026-04-22.md
scripts/: bootstrap.sh  preview_waveform.py
src/whispy/: __init__.py  doctor.py
src/whispy/api/: __init__.py  server.py
src/whispy/core/: __init__.py  audio.py  auth.py  config.py  engine.py  paths.py  segmentation.py  state_machine.py  test_core.py  test_stress.py  text_cleaner.py
src/whispy/hardware/: __init__.py  event_decode.py  event_tap.py  injection.py
src/whispy/platform/: __init__.py  detect.py  ports.py
src/whispy/ui/: __init__.py  audio_level.py  ferrofluid_view.py  ferrofluid_window.py  indicator_window.py  level_math.py  menu_bar.py  menu_theme.py  unicode_anim.py  waveform_window.py
tests/: E2E_PLAN.md  conftest.py  test_anim_frames.py  test_audio.py  test_audio_level.py  test_auth.py  test_config_validation.py  test_deploy_workflow.py  test_doctor.py  test_e2e.py  test_e2e_smoke.py  test_e2e_smoke_linux.py  test_engine.py  test_error_handling.py  test_event_decode.py  test_event_tap_e2e.py  test_ferrofluid_integration.py  test_ferrofluid_visualization.py  test_homebrew_formula.py  test_injection.py  test_install_scripts.py  test_integration.py  test_language_detection.py  test_level_math.py  test_linux_adapters.py  test_menu_bar.py  test_menu_theme.py  test_paths.py  test_permissions.py  test_platform_detect.py  test_segmentation.py  test_simplify_config_ui.py  test_state_machine.py  test_text_cleaning.py  test_transcription_quality.py  test_validation_core.py  test_waveform.py  test_website.py
tests/fixtures/audio/: generate.sh
tests/test_api/: conftest.py  test_server.py
tests/unit/: test_placeholder.py
tests/validation/: __init__.py  harness.py  matrix.py  operator.py  outcomes.py  preflight.py  run.py
website/: index.html  script.js  styles.css
(+118 files in other folders)
