[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "whispy"
version = "0.1.0"
description = "macOS menu bar speech-to-text daemon"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "pyobjc-framework-Quartz",
    "rumps",
    "sounddevice",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "macos: requires macOS",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests set up sys.path before importing whispy (E402) and use lambdas as
# lightweight callbacks (E731); both are intentional in the test suite.
"tests/*" = ["B011", "E402", "E731"]
# The daemon entry point adjusts sys.path before importing the package.
"whispy_daemon.py" = ["E402"]

[tool.coverage.run]
source = ["src/whispy"]
# Omit only the irreducible Cocoa/rumps/sounddevice and Quartz call sites.
# Pure logic extracted out of them (ui/level_math.py, ui/unicode_anim.py,
# core/paths.py, hardware/event_decode.py) stays covered.
omit = [
    "src/whispy/ui/menu_bar.py",
    "src/whispy/ui/waveform_window.py",
    "src/whispy/ui/indicator_window.py",
    "src/whispy/ui/audio_level.py",
    "src/whispy/hardware/event_tap.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]
