[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "whispy"
version = "0.1.0"
description = "Cross-platform (macOS / Linux-X11) speech-to-text daemon"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    # Cross-platform audio capture (PortAudio). Hard runtime dependency.
    "sounddevice",
    # Voice-activity detection for streaming segmentation. The maintained
    # binary-wheel fork (no pkg_resources/setuptools runtime dep; works on
    # Python 3.12+). The segmenter degrades to an energy gate if it is absent.
    "webrtcvad-wheels",
    # macOS-only: CGEventTap hotkey + rumps menu bar.
    "pyobjc-framework-Quartz; sys_platform=='darwin'",
    # macOS-only: AVFoundation drives the microphone TCC prompt + status check
    # (doctor.py, platform/macos/permissions.py).
    "pyobjc-framework-AVFoundation; sys_platform=='darwin'",
    # macOS-only: ApplicationServices provides the Accessibility check + prompt
    # (AXIsProcessTrusted / AXIsProcessTrustedWithOptions).
    "pyobjc-framework-ApplicationServices; sys_platform=='darwin'",
    "rumps; sys_platform=='darwin'",
    # Linux/X11-only: pynput hotkey + pystray tray (Pillow renders the icon).
    # Text injection additionally needs the `xdotool` system binary — see README.
    "pynput; sys_platform=='linux'",
    "pystray; sys_platform=='linux'",
    "Pillow; sys_platform=='linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Real-model / live-hardware tests are marked per-OS and excluded from the
# default run (slow, model download, live hardware). Run them with
# `pytest -m macos` or `pytest -m linux`.
addopts = "-m 'not macos and not linux'"
markers = [
    "macos: requires macOS (real Whisper model, live hardware, CGEventTap/rumps)",
    "linux: requires a live Linux/X11 session (pynput, xdotool, pystray, real audio)",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests set up sys.path before importing whispy (E402) and use lambdas as
# lightweight callbacks (E731); both are intentional in the test suite.
"tests/*" = ["B011", "E402", "E731"]
# The daemon entry point adjusts sys.path before importing the package.
"whispy_daemon.py" = ["E402"]

[tool.coverage.run]
source = ["src/whispy"]
# Omit only the irreducible Cocoa/rumps/sounddevice and Quartz call sites.
# Pure logic extracted out of them (ui/level_math.py, ui/unicode_anim.py,
# core/paths.py, hardware/event_decode.py) stays covered.
omit = [
    "src/whispy/ui/menu_bar.py",
    "src/whispy/ui/waveform_window.py",
    "src/whispy/ui/indicator_window.py",
    "src/whispy/ui/audio_level.py",
    "src/whispy/hardware/event_tap.py",
    # Real-seam platform adapters (live OS bindings, exercised in per-OS tiers).
    "src/whispy/platform/macos/notifier.py",
    "src/whispy/platform/linux/hotkey.py",
    "src/whispy/platform/linux/tray.py",
    "src/whispy/platform/linux/notifier.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]
